--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "frontend",
+  "name": "divinecreation",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next export"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "12.2.0",
